# x2camf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  basisGenerator.cpp  cfour_interface.cpp  dhf.cpp  dhf.h  dhf_sph.cpp  dhf_sph.h  dhf_sph_ca.cpp  dhf_sph_ca.h  dhf_sph_pcc.cpp  element.h  general.cpp  general.h  gsl_functions.cpp  gto.cpp  gto.h  gto_spinor.cpp  gto_spinor.h  input  int_sph.cpp  int_sph.h  int_sph_basic.cpp  int_sph_gauge.cpp  int_sph_gaunt.cpp  main.cpp  mkl_itrf.cpp  mkl_itrf.h  prvecr.f  pyscf_interface.cpp  rfile.f  scf.cpp  scf.h  setup.py  test.cpp  wfile.f  x2c.cpp  (+1 more)
executables/: basisGenerator.cpp  cfour_interface.cpp  main.cpp  pyscf_interface.cpp  pyx2camf.cpp  test.cpp  xrayCorrection.cpp
include/: dhf_sph.h  dhf_sph_ca.h  dhf_sph_ca2.h  element.h  finterface.h  general.h  gsl_functions.h  int_sph.h  mkl_itrf.h
src/: dhf_sph.cpp  dhf_sph_ca.cpp  dhf_sph_ca2.cpp  dhf_sph_pcc.cpp  finterface.f90  general.cpp  int_sph.cpp  int_sph_basic.cpp  int_sph_gauge.cpp  int_sph_gaunt.cpp  mkl_itrf.cpp
x2camf/: __init__.py  cint2cfour.py  x2camf.py
